# EstocaPao

./: .gitignore  CHANGELOG.md  CLAUDE.md  GUIA_RAPIDO.md  README.md  config.ini  config.ini.example  estocapao.spec  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
context/: Execution Plan - EstocaPão.md  Product Discovery Document- EstocaPão.md  Software Design Document - EstocaPão.md  Solution Architecture Document - EstocaPão.md
context/backlog/: README.md  TSK-01.md  TSK-02.md  TSK-03.md  TSK-04.md  TSK-05.md  TSK-06.md  TSK-07.md  TSK-08.md  TSK-09.md  TSK-10.md  TSK-11.md  TSK-12.md  TSK-13.md  TSK-14.md  TSK-15.md  TSK-16.md  TSK-17.md  TSK-18.md  TSK-19.md  TSK-20.md  TSK-21.md  TSK-22.md  TSK-23.md  TSK-24.md  TSK-25.md  TSK-26.md  TSK-27.md  TSK-28.md  TSK-29.md  TSK-30.md  TSK-31.md  TSK-32.md  TSK-33.md
src/: main.py
src/estocapao/: __init__.py
src/estocapao/bootstrap/: __init__.py  initializer.py
src/estocapao/modules/: __init__.py
src/estocapao/modules/inventory/: __init__.py
src/estocapao/modules/inventory/app/: __init__.py  quarantine.py  usecase.py
src/estocapao/modules/inventory/domain/: __init__.py  entity.py  ports.py  value.py
src/estocapao/modules/inventory/infra/: __init__.py  cli.py  (+1 more)
src/estocapao/shared/: __init__.py  ansi.py  logger.py
tests/: __init__.py
tests/e2e/: __init__.py  test_cli_commands.py
tests/integration/: __init__.py  test_initializer.py  test_repo_adapter.py
tests/unit/: __init__.py  test_domain_entity.py  test_domain_value.py  test_quarantine.py  test_usecases.py
