[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estocapao"
version = "0.1.0"
description = "High-Performance In-Memory Local CLI Inventory Engine for Artisanal Bakeries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: :: OS Independent",
]
dependencies = []

[project.scripts]
estocapao = "estocapao.modules.inventory.infra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyrefly]
# Tell Pyrefly where source files live (src/ layout)
search_path = ["src"]
# Point to the Python interpreter that has 'estocapao' on sys.path
python_interpreter = "C:/Program Files/Python310/python.exe"
